complete profile, add gif loading, update Search

--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -90,12 +90,21 @@
     margin-top: 3px;
 }
 
+.header .search-form .loading {
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    width: 15px;
+    height: 15px;
+    transform: translateY(-50%);
+}
+
 
 /* ----------------- Responsive -----------------*/
 @media (max-width: 766px){
-    .header .navbar .logo{
+    /* .header .navbar .logo{
       display: none;
-    }
+    } */
     .header .menu{
         width: 100%;
         height: 40px;
