--- a/frontend/src/styles/avatar.css
+++ b/frontend/src/styles/avatar.css
@@ -1,3 +1,9 @@
+.supper-avatar {
+    height       : 150px;
+    width        : 150px;
+    border-radius: 50%
+}
+
 .big-avatar {
     height       : 50px;
     width        : 50px;
