--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -53,3 +53,6 @@ code {
 
 /* -------- AVATAR ---------- */
 @import url("./avatar.css");
+
+/* -------- PROFILE ---------- */
+@import url("./profile.css");
