--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -46,3 +46,79 @@
 .info-container .follow-btn span:hover {
   text-decoration: underline;
 }
+
+
+/* ------ Profile Edit---------- */
+.edit-profile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0008;
+  z-index: 9;
+  overflow: auto;
+}
+
+.edit-profile form {
+  max-width: 450px;
+  width: 100%;
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px auto;
+}
+
+.edit-profile .btn-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.edit-profile .info-avatar {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 50%;
+  position: relative;
+  margin: 15px auto;
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.edit-profile .info-avatar img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.edit-profile .info-avatar span {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  text-align: center;
+  color: orange;
+  transition: 0.3s ease-in-out;
+  background: #fff5;
+}
+
+.edit-profile .info-avatar:hover span {
+  bottom: -15%;
+}
+
+.edit-profile .info-avatar #file-up {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  opacity: 0;
+}
+
+::-webkit-file-upload-button {
+  cursor: pointer;
+}
