--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -122,3 +122,37 @@
 ::-webkit-file-upload-button {
   cursor: pointer;
 }
+
+/* ------ Follow ---------- */
+.follow {
+  position: fixed;
+  top:0;
+  left: 0;
+  background: #0008;
+  width: 100%;
+  height: 100vh;
+  z-index: 4;
+}
+.follow-box {
+  width: 350px;
+  border: 1px solid #222;
+  border-radius: 5px;
+  background: white;
+  padding: 20px 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.follow-content {
+  width: 100%;
+  height: 350px;
+  overflow: auto;
+}
+.follow-box .close {
+  position: absolute;
+  top: 0;
+  right: 3px;
+  font-size: 3rem;
+  cursor: pointer;
+}
