Create Post_1 => not complete

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -56,3 +56,9 @@ code {
 
 /* -------- PROFILE ---------- */
 @import url("./profile.css");
+
+/* -------- HOME ---------- */
+@import url("./home.css");
+
+/* -------- STATUS MODAL ---------- */
+@import url("./status_modal.css");
