--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -24,3 +24,53 @@
 .posts .card{
     box-shadow: 0 0 4px #ddd;
 }
+
+/* --------- Post Card Header --------- */
+.posts .card-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    padding: 15px 25px;
+}
+.posts .card-header .card-name{
+    transform: translateY(3px);
+}
+.posts .card-header .dropdown-menu{
+    position: absolute;
+    right: 0;
+    left: inherit;
+}
+.posts .card-header .dropdown-item{
+    display: flex;
+    margin: 5px 0;
+}
+
+/* ---------- Post Card Body ---------- */
+.posts .card-body-content{
+    padding: 0 25px;
+    margin-top: -10px;
+    margin-bottom: 10px;
+}
+.posts .card-body-content .readMore{
+    color: crimson;
+    cursor: pointer;
+}
+
+/* ---------- Post Card Footer ---------- */
+.posts .card-icon-menu{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 15px;
+    cursor: pointer;
+}
+.posts .card-icon-menu i{
+    font-size: 28px;
+    margin: 10px;
+}
+.posts .card-icon-menu img{
+    width: 28px;
+    height: 28px;
+    transform: translate(5px, -5px);
+    opacity: 0.9;
+}
