re-add login with github

--- a/frontend/src/styles/auth.css
+++ b/frontend/src/styles/auth.css
@@ -29,3 +29,20 @@
   cursor   : pointer;
   opacity  : 0.5
 }
+
+.auth-page a img {
+  width : 174px;
+  height: 66px;
+}
+
+.auth-page .custom-btn {
+  display    : flex;
+  gap        : 0.2;
+  align-items: center;
+}
+
+.auth-page .S9gUrf-YoZ4jf,
+.S9gUrf-YoZ4jf #gsi_440267_807549 {
+  /* width: 38px; */
+
+}
