--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -62,3 +62,9 @@ code {
 
 /* -------- STATUS MODAL ---------- */
 @import url("./status_modal.css");
+
+.mode {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
