--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -6,6 +6,8 @@
     left: 0;
     z-index: 2;
     box-shadow: 0 0 10px #ddd;
+    background: #f8f9fa;
+    border: 1px solid rgb(0, 0, 0, .125);
 }
 
 .header .nav-bar {
@@ -106,8 +108,16 @@
       display: none;
     } */
     .header .menu{
+        position: absolute;
+        top: calc(100vh - 50px);
+        left: 0;
         width: 100%;
-        height: 40px;
+        height: 50px;
+        box-shadow: 0 0 0 10px #ddd;
+        z-index: 2;
+        background: #f8f9fa;
+        border: 1px solid rgb(0, 0, 0, .125);
+
     }
     .header .menu .navbar-nav{
         display: flex;
