--- a/frontend/src/styles/components/sidebar.css
+++ b/frontend/src/styles/components/sidebar.css
@@ -1,5 +1,5 @@
 .SideBar_container {
     width: var(--sidebar-width);
     height: var(--sidebar-height);
-    background-color: blue;
+    background-color: antiquewhite;
 }
