--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -2,15 +2,20 @@
   --header-height: 60px;
   --sidebar-width: 320px;
   --sidebar-height: 445px;
+
+  --primary-color: #FE2C55;
+}
+
+
+a:hover {
+  text-decoration: none;
 }
 
 * {
   padding: 0;
   box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -73,6 +78,10 @@ code {
 
 /* LAYOUTS */
 @import url("./components/sidebar.css");
+
+@import url("components/popover.css");
+
+@import url("components/user_card.css");
 
 @import url("./layouts/home_layout.css");
 
