--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1,7 +1,7 @@
 /* --------- Status ---------- */
 .status {
     background: white;
-    box-shadow: 0 0 5px #ddd;
+    box-shadow: 0 0 2px #ddd;
     padding: 20px;
     border-radius: 5px;
     border: 1px solid rgb(0, 0, 0, .125);
@@ -15,6 +15,7 @@
     padding: 0 10px;
     text-align: left;
     margin: 0 5px;
+    font-size: 12px;
 }
 .status .statusBtn:hover{
     background: #ddd;
@@ -31,7 +32,6 @@
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
-    padding: 15px 25px;
 }
 .posts .card-header .card-name{
     transform: translateY(3px);
@@ -48,8 +48,8 @@
 
 /* ---------- Post Card Body ---------- */
 .posts .card-body-content{
-    padding: 0 25px;
-    margin-top: -10px;
+    padding: 0 1rem;
+    margin-top: 8px;
     margin-bottom: 10px;
 }
 .posts .card-body-content .readMore{
@@ -61,16 +61,32 @@
 .posts .card-icon-menu{
     display: flex;
     justify-content: space-between;
-    padding: 0 15px;
     cursor: pointer;
 }
 .posts .card-icon-menu i{
-    font-size: 28px;
+    font-size: 24px;
     margin: 10px;
 }
 .posts .card-icon-menu img{
-    width: 28px;
-    height: 28px;
+    width: 24px;
+    height: 24px;
     transform: translate(5px, -5px);
     opacity: 0.9;
+}
+
+.posts .card-footer-fix {
+    padding: .25rem 0.5rem;
+}
+
+.card .un-cap,  .card .content-cap{
+    font-size: 15px;
+}
+
+.card .un-cap {
+    font-weight: bolder;
+
+}
+
+.cart-footer .cart-img-post {
+    max-width: 488px;
 }
